styles.css
/* ... */
/* Container Class */
.c-container-head {
  max-width: 100%;
}

.c-continer-sidenav {
  max-width: 100%;
}

.c-container-content {
  max-width: fit-content;
}

.c-text-width{
  width: 60ch; /* Limiting width to 60 characters */
}
/***** Outback Nursery Site *****/
/* Topnav */
.topnavbar {
  position: fixed;
  top: 0;
  width: 100%;
  display: flex;
  justify-content: space-between;
  overflow: hidden;
  z-index: 1000;
}
.topnavbar__link {
  text-decoration: none;
}
.hamburger-menu {
  display: block;
}
.bar {
  width: 25px;
  height: 3px;
  background-color: #fff;
  margin: 5px 0;
}
.topnav__links {
  display: none;
}
/* Styles for the hamburger icon */
.hamburger {
  display: flex;
  flex-direction: column;
  font-size: 2rem;
  cursor: pointer;
  padding: 15px;
}
.cancel {
  display: flex;
  flex-direction: column;
  font-size: 2rem;
  cursor: pointer;
  padding: 15px;
}
.hamburger:hover {
  color: var(--text-hover-100);
}
/* Style for the call-to-action button */
.c-cta__button {
  border: none;
  cursor: pointer;
  text-decoration: none;
  width: fit-content;
  transition: background-color 0.3s ease;
}
/* Hover effect for the button */
.c-cta__button:hover {
  background-color: var(--primary-bg);
}
/* Hero section */
.hero__section {
  position: relative;
  height: 650px;
  background: url("images/japanese-maple-tree.jpg") center/cover no-repeat;
  color: white;
  text-align: center;
  display: flex;
  align-items: center;
  justify-content: center;
}
/* Style for the overlay */
.c-overlay {
  position: absolute;
  top: 0;
  left: 0;
  width: 100%;
  height: 100%;
  background-color: #0f0c0c30;
}
/* Style for the hero content */
.hero__content {
  z-index: 1;
}

/* Scroll animation for announcement section */
.l-announcement {
  position: fixed; /* Change to fixed */
  top: 0; /* Position at the top */
  left: 0;
  width: 100%;
  overflow-x: hidden; /* Hide overflow to prevent scrollbar */
  white-space: nowrap; /* Prevent text wrapping */
  z-index: 1000; /* Ensure it's above other content */
}
.scroll__text {
  display: flex; /* Display text in a single line */
  padding: 0 20px; /* Add padding to the scrolling text */
  animation: scrollText 20s linear infinite; /* Apply the scrollText animation */
}
/* Define the animation */
@keyframes scrollText {
  0% {
    transform: translateX(0); /* Start position */
  }
  100% {
    transform: translateX(100%); /* End position (scroll to the left) */
  }
}
/* Products section -01 */

.c-carousel--sf {
  width: 100%;
  overflow: hidden;
  position: relative;
}

.c-carousel {
  display: flex;
  transition: transform 0.5s ease;
}
/* Styles for each card */
.c-sf__card {
  flex: 0 0 calc(100% - 40px);
  max-width: calc(100% - 30px);
  border: 1px solid var(--clr-secondary);
  margin: 20px;
  text-align: center;
  scroll-snap-align: center;
  cursor: pointer;
  height: 450px; /* Adjust card height */
  background-color: var(--clr-card); /* Add background color */
  transition: transform 0.3s ease; /* Add transition effect */
}

/* Hover effect for card */
.c-sf__card:hover {
  transform: translateY(-10px); /* Move card up slightly on hover */
}

/* Styles for image in each card */
.c-sf__card img {
  width: 100%; /* Set image width to match card width */
  height: 75%; /* Set image height to 75% of card height */
  box-shadow: 0px 3px 3px 0px #7a8895;
  border-radius: 0 0 15px 15px;
  object-fit: inherit; /* Maintain aspect ratio without stretching */
}

/* Styles for pagination buttons */
.c-pagination {
  display: flex;
  justify-content: center;
  margin-top: 20px;
}
.c-pagination button {
  position: absolute;
  top: 50%;
  transform: translateY(-50%);
  padding: 10px 20px;
  border: none;
  background-color: var(--primary-bg);
  color: #fff;
  cursor: pointer;
}
.prev-btn,
.next-btn {
  position: absolute;
  top: 50%;
  transform: translateY(-50%);
  padding: 10px;
  background-color: rgba(0, 0, 0, 0.5);
  color: #fff;
  border: none;
  cursor: pointer;
  z-index: 1;
}

.prev-btn {
  left: 10px;
}

.next-btn {
  right: 10px;
}

/* Product section - 02 */
.c-category__container {
  max-width: 100%;
  overflow-x: hidden;
  overflow-y: hidden; /* Disable vertical scrolling */
}

.c-category--cards {
  display: flex;
  flex-wrap: nowrap;
  overflow-x: auto;
  overflow-y: hidden; /* Disable vertical scrolling */
  margin-right: 2.5rem;
  margin-left: 2.5rem;
}

.c-card {
  flex: 0 0 auto;
  width: 300px;
  height: 315px;
  margin-left: 20px;
  margin-right: 20px;
  display: flex;
  justify-content: center;
  align-items: center;
}
.c-card {
  position: relative;
  width: 300px; /* Full width on mobile */
  height: auto; /* Adjust height based on content */
  margin-bottom: 20px;
}
.c-card__image {
  width: 300px;
  height: 300px;
}
.c-card__overlay {
  position: absolute;
  top: 10;
  left: 20;
  bottom: 20;
  width: 300px;
  height: 315px;
  background-color: rgba(0, 0, 0, 0.5); /* Adjust opacity as needed */
  display: flex;
  align-items: center;
  justify-content: center;
}

.c-card__image {
  width: 100%;
  height: auto; /* Maintain aspect ratio */
  object-fit: cover;
}

/* services */
.c-services{
  width: 100%;
  height: auto;
}
.services-card {
  width: 580px;
  height: 450px;
  perspective: 1000px;
  margin: 15px;
}
.card-inner {
  width: 100%;
  height: 100%;
  text-align: center;
  transition: transform 0.8s;
  transform-style: preserve-3d;
}
.services-card:hover .card-inner {
  transform: rotateY(180deg);
}
.card-front,
.card-back {
  width: 100%;
  height: 100%;
  position: absolute;
  backface-visibility: hidden;
  display: flex;
  flex-direction: column;
  justify-content: center;
  align-items: center;
}

.card-back {
  transform: rotateY(180deg);
}

.services__button {
  padding: 10px 20px;
  text-decoration: none;
  display: inline-block;
}

/* Plant care guide */
.c-guide__image {
  display: none;
}
/* ... */

